website/main-pages/ballerina.io-website-theme/css/ballerina-io.css
@font-face {
	font-family: "CalibreWeb-Semibold";
	src: url(/ballerina-fonts/CalibreWeb-Semibold.woff2) format("woff2"),
		 url(/ballerina-fonts/CalibreWeb-Semibold.woff) format("woff"),
		 url(/ballerina-fonts/CalibreWeb-Semibold.eot),
		 url(/ballerina-fonts/CalibreWeb-Semibold.eot?#iefix) format("embedded-opentype");
}

body.cBallerina-io {
	background-color: #ffffff;
	font-family: "pragmatica", sans-serif;
	background-image: url("/img/body-bg.svg");
	background-repeat: repeat-x;
}

input[type="text"],
input[type="password"],
input[type="email"],
input[type="url"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="datetime"],
input[type="datetime-local"],
input[type="week"],
input[type="number"],
input[type="tel"],
input[type="color"],
input[type="search"] {
	font-family: "pragmatica", sans-serif;
}

body.cBallerina-io .row {
	margin: 0;
}

body.cBallerina-io .container {
	padding: 0;
}

.cBallerina-io-top-row {
	background-color: #e7eaeb;
}

a {
	cursor: pointer;
}

a:hover {
	text-decoration: none !important;
}

.row.cBallerina-io {
	padding: 0;
	margin: 0;
	height: 10px;
}

.cTopLineContainer {
	padding-left: 26px;
	padding-right: 0;
}

.cTopLine {
	background-color: #3ad1ca;
	height: 10px;
	width: 100%;
}

.cBallerina-io-Nav {
	background: #e7eaeb;
}

.cTagLine {
	font-size: 16px !important;
}

.cBallerina-io p {
	font-size: 14px;
	color: #57595d;
	line-height: 18px;
}

.row.cBallerina-io-Nav {
	padding: 36px 0;
}

.row.cBallerina-io-Logo-row {
	background-color: #e7eaeb;
}

.cBallerina-io-Logo-Container {
	padding-top: 30px
}

a.cLogo img {
	width: 200px;
}

.navbar {
	margin-bottom: 0;
	padding: 0;
}

.navbar-nav > li {
	z-index: 9999999;
}

.navbar-nav > li:last-child a {
	padding-right: 0;
}

.navbar-nav > li > a {
	padding-top: 0;
	line-height: 12px;
	padding: 0px 16px;
	color: #57595d;
}

.navbar-nav > li > a:hover {
	color: #3ad1ca !important;
}

.navbar-nav > li.cActive > a {
	color: #22b7b1 !important;
}

.nav.navbar-nav.cTopNav li ul {
	display: none;
}

.nav > li > a:focus,
.nav > li > a:hover {
	background-color: transparent !important;
}

ul.navbar-nav {
	float: right;
	margin-right: -20px;
}

.navbar-brand {
	padding: 0;
	margin: -4px 0 0 0;
}

.cSerachIcon {
	margin-top: -3px;
	min-width: 33.2px;
    display: inline-block;
    vertical-align: top;
}

.cHr {
	border: 1px solid #a6a8ab;
	margin-top: 30px;
	margin-bottom: 25px;
}

.cBallerina-io-Gray-row {
	background-image: url("/img/gray-bg.svg");
	background-repeat: no-repeat;
	background-position: bottom center;
	margin-top: 30px;
	padding-bottom: 30px;
	background-color: #e7eaeb;
	background-size: 250%;
}

.cBallerina-io-White-row {
	background-color: #ffffff;
	padding-bottom: 100px;
	padding: 90px 0;
}

.cSearchBoxTopMenu {
	position: absolute;
	right: 0;
	top: 40px;
	height: 20px;
	width: 200px;
	/* background: red;
    */
	opacity: 0;
	transition: all 0.2s ease 0s;
}

#rtd-search-form input {
	font-size: 14px;
	padding: 2px 10px;
	width: 0%;
	border-radius: 0px;
	border: none;
	padding: 2px 10px;
	width: 100%;
}

.cSearchBoxTopMenu.cShowcSearchTopMenu {
	opacity: 1;
	top: 40px;
	transition: all 0.2s ease 0s;
}

/*COLUMNS*/

.cBallerina-io-left-col {
	padding-right: 0;
}

.cBallerina-io-Home-Left-col .cBlallerina-io-docs-left-nav-box a {
	font-size: 10px;
	padding: 1px 0;
}

/*GEN INNER*/

.cGreenLink,
.cGreenTitle,
.cGreenLink a,
.cGreenTitle a {
	font-size: 14px;
	font-weight: 800;
	font-family: "CalibreWeb-Semibold", "pragmatica", sans-serif;
	color: #22b7b1;
	margin-bottom: 30px;
	margin-top: 0px;
	text-transform: uppercase;
	letter-spacing: 1px;
}

.cInnerPageContentCol {
	padding-left: 0;
}

.cBallerina-io-Home-Left-col .cInnerPageContentCol p {
	font-size: 14px;
	margin-bottom: 30px;
	line-height: 20px;
}

/*HOME*/

.cMainParagraph {
	font-weight: 200;
}

.cBallerina-io-Home-Left-col {
	padding-top: 50px;
}

.cBallerina-io-Home-Left-col p {
	font-size: 25px;
	line-height: 30px;
	margin-bottom: 0;
}

.cBallerina-io-Home-Left-col a {
	font-size: 14px;
	color: #22b7b1;
	font-weight: normal;
}

.cHomeButtonContainer {
	display: inline-block;
	width: 100%;
}

a.cBallerina-io-Home-main-download-button {
	font-size: 25px;
	background-color: #57595d;
	color: #ffffff;
	padding: 20px 50px 20px 74px;
	display: inline-block;
	float: left;
	background-image: url("/img/download-bg.svg");
	background-repeat: no-repeat;
	background-position: 26px 22px;
	margin-top: 30px;
	font-weight: 300;
	text-decoration: none;
}

.cBallerina-io-Home-main-download-button p {
	padding: 0;
	margin: 0;
	font-family: monaco, Consolas, "Lucida Console", monospace;
	font-size: 11px;
	color: #d9dadb;
	margin-left: 1px;
	line-height: 15px;
}

a.cBallerina-io-Home-main-download-button:hover {
	background-color: #22b7b1;
	background-image: url("/img/download-bg-white.svg");
}

p.cBallerina-io-Home-OS {
	font-size: 12px;
	line-height: 20px;
	display: inline-block;
	margin-top: 10px;
	margin-left: 1px;
}

.cBallerina-io-Home-main-content-wraper {
	padding: 0;
}

.cBallerina-io-Home-main-instructions {
	margin-bottom: 19px;
	padding-left: 0;
}

.cBallerina-io-Home-main-instructions p {
	font-size: 14px;
	line-height: 20px;
}

.cBallerina-io-Home-main-instructions p span {
	color: #22b7b1;
	text-transform: uppercase;
	font-family: "CalibreWeb-Semibold", "pragmatica", sans-serif;
	font-weight: normal;
	letter-spacing: 2px;

}

.cBallerina-io-Home-widget {
	padding-left: 0;
}

.cBallerina-io-Home-widget img {
	max-width: 100%;
}

/*INNER PAGE */

.cBallerina-io-Home-Middle-col {
	background-color: #ffffff;
}

h2.cMainH2Title {
	font-weight: 200;
	margin-bottom: 30px;
	margin-top: 0;
	color: #57595d;
}

#ballerina_grammar,
#ballerina_grammar_2 {
	min-height: 400px;
}

/*FOOTER*/

#iBallerinaFooter {
	background: #ffffff;
	padding: 40px 0;
}

.cBallerinaFooterLinks ul {
	padding: 0;
	margin-top: -2px;
}

.cBallerinaFooterLinks ul li {
	list-style: none;
	/* font-size: 10px;
    */
	color: #57595d;
	font-weight: 400;
}

.cBallerinaFooterLinks ul li a {
	color: #57595d;
	text-transform: uppercase;
	font-family: "CalibreWeb-Semibold", "pragmatica", sans-serif !important;
	font-weight: normal;
	font-size: 12px;
	letter-spacing: 1px;
}

.cBallerinaFooterSignUp p {
	font-size: 10px;
	margin-bottom: 0px;
}

.cBallerinaFooterSignUp p span {
	font-weight: normal;
	font-family: "CalibreWeb-Semibold", "pragmatica", sans-serif !important;
	font-weight: normal;
	font-size: 12px;
	letter-spacing: 1px;
	text-transform: uppercase;
	margin-bottom: 10px;
	display: inline-block;
}

.cBallerina-io-middle-col.cBallerinaFooterSignUp {
	padding-left: 0;
}

#iBallerinaFooter .cBallerina-io-right-col p {
	font-size: 12px;
	padding-left: 40px;
}

.cSocialmedia ul {
	padding: 0;
	margin: 0;
}

.cSocialmedia ul li {
	list-style: none;
	display: inline-block;
	float: left;
	margin-right: 20px;
	padding-top: 3px;
	padding-left: 2px;
}

.cFormContainer {
	width: 100%;
}

#emailUser {
	background-color: #e6e9ea;
	height: 29px;
	font-size: 14px;
	width: 100%;
	border: none;
	padding-left: 10px;
	padding: 5px;
	line-height: 16px;
	border: 1px solid #e6e9ea;
}

#iBallerinaFooter p {
	line-height: 16px !important;
}

.cSocialmedia {
	margin-top: 7px;
	display: inline-block;
	float: left;
}

#subscribeUserButton {
	font-family: "CalibreWeb-Semibold", "pragmatica", sans-serif;
	text-transform: uppercase;
	font-weight: 400;
	letter-spacing: 1px;
	padding: 0px 16px;
	background-color: #ffffff;
	border: 1px solid #e6e9ea;
	font-size: 14px;
	line-height: 29px;
	height: 29px;
	color: #3ad1ca;
	font-weight: 800;
	display: inline-block;
	letter-spacing: 3px;
}

.cFieldContainer {
	display: inline-block;
	float: left;
	width: 100%;
}

.cButtonContainer {
	display: inline-block;
	float: left;
	margin-left: 0;
	margin-top: 5px;

}

#subscribeUserMessage {
    color: #22b7b1;
    text-transform: uppercase;
    font-family: "CalibreWeb-Semibold", "pragmatica", sans-serif;
    font-weight: normal;
    letter-spacing: 2px;
    display: inline-block;
    width: 100%;
    padding: 10px 0;
}

/*MOBILE */

button.navbar-toggle {
	background: #464646;
	border-radius: 0;
}

.navbar-toggle .icon-bar {
	border-radius: 0;
	background-color: #ffffff;
}

.navbar-collapse.collapse.in .ul.navbar-nav {
	text-align: right;
	width: 100%;
}

.cMobileLogo {
	display: none;
}

.cBallerinaButtonWhite {
	border: 1px solid #000000;
	font-family: "CalibreWeb-Semibold", "pragmatica", sans-serif !important;
	text-transform: uppercase;
}

.pdframe {
	height: 1px!important;
	overflow: hidden!important;
	visibility: hidden!important;
}

#mkdocs-search-query {
	display: block;
    width: 100%;
    height: 34px;
    padding: 6px 12px;
    font-size: 14px;
    line-height: 1.42857143;
    color: #555;
    background-color: #fff;
    background-image: none;
    border: 1px solid #ccc;
    border-radius: 4px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
}

#mkdocs-search-results {
	z-index: 999999;
	background: #ffffff;
}

#mkdocs-search-results > article {
	padding: 15px;
}

#mkdocs-search-results > article > h3 {
	margin-top: 0;
}

#mkdocs-search-results > article:first-child {
	padding: 15px 15px 0;
}

#mkdocs-search-results > article:last-child {
	padding: 0 15px 15px;
}

@media screen and (max-width: 768px) {
	.cBallerina-io-Gray-row {
		padding-top: 70px;
	}
	.cMobileLogo {
		display: block;
		width: 100px;
		margin-top: 8px;
	}
	.cMobileLogo img {
		max-width: 100%;
	}
	.navbar-header {
		padding-left: 0px;
		height: 65px;
		width: 100%;
		display: inline-block;

	}
	ul.navbar-nav {
		float: right;
		margin-right: 0px;
	}
	p.navbar-brand {
		font-size: 10px;
		line-height: 11px;
		margin-top: 10px;
		float: left;
	}
	.cBallerina-io-Nav {
		position: fixed;
		top: 0;
		width: 100%;
		background-color: #e7eaeb;
		z-index: 999;
	}
	.navbar-toggle {
		margin-top: 15px;
		margin-right: 0;
	}
	.nav.navbar-nav {
		text-align: right;
	}
	.nav.navbar-nav.cTopNav > li > a {
		font-size: 18px;
		color: #ffffff;
	}
	.nav.navbar-nav.cTopNav > li > a:hover {
		background-color: transparent;
		color: #23b8b1;
	}
	.nav.navbar-nav.cTopNav > li {
		padding: 20px 0;
	}
	.navbar-collapse {
		background-color: #464646;
		padding-right: 20px;
	}
	.row.cBallerina-io-Nav {
		padding: 10px 0 20px 0;
		border-top: 10px solid #3ad1ca;
		height: 100px;
	}
	/* FOOTER */
	.cBallerina-io-middle-col.cBallerinaFooterSignUp {
		padding-left: 15px;
	}
	#iBallerinaFooter .cBallerina-io-right-col p {
		padding-left: 0;
	}
	.cBallerinaFooterSignUp {
		padding-top: 30px;
		padding-bottom: 30px;
	}
	.cSocialmedia {
		width: 100%;
		margin-top: 10px;
	}
}

